[package]
name = "centerline"
version = "0.10.0"
authors = ["eadf"]
edition = "2021"
description = "Simple library for finding centerlines of 2D closed geometry"
readme = "README.md"
repository = "https://github.com/eadf/centerline.rs"
license = "MIT OR Apache-2.0"
keywords = ["centerline", "geometry", "median-axis"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
]

[features]
default = []
glam = ["vector-traits/glam"] # this is only needed for the gui, tests and benchmarks
cgmath = ["vector-traits/cgmath"] # this is only needed for some tests

[dependencies]
vector-traits = { version = "0.3.2", features = ["glam"] }
linestring = "0.12.0"
boostvoronoi = { version = "0.11.0" }
ahash = "0.8.6"
vob = "3.0.3"
thiserror = "1.0.50"
rayon = "1.8.0"
bitflags = "2.4.1"
ordered-float = "4.1.1"
obj-rs = { version = "0.7.1", optional = true }
smallvec = "1.11.2"

[[example]]
name = "fltk_gui"
path = "example/centerline_gui.rs"
required-features = ["obj-rs"]

[[example]]
name = "cli"
path = "example/cli.rs"

[dev-dependencies]
vector-traits = { version = "0.3.2", features = ["glam", "cgmath"] }

fltk = "1.4.18"
itertools = "0.12.0"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
