[package]
name = "centerline"
version = "0.7.1"
authors = ["eadf"]
edition = "2021"
description = "Simple library for finding centerlines of 2D closed geometry"
readme = "README.md"
repository = "https://github.com/eadf/centerline.rs"
license = "AGPL-3.0"
keywords = ["centerline", "geometry", "median-axis"]
exclude = [
    "img/*",
    "idea/*",
    ".github/*",
]

[features]
console_debug = []
default = []

[dependencies]
ahash = "0.8"
num-traits = "0.2"
vob = "3.0"
boostvoronoi = { version = "0.11", features = ["cgmath"] }
linestring = "0.8.1"
cgmath = "0.18"
approx = "0.5"
thiserror = "1.0"
rayon = "1.8"
bitflags = "2.4.1"
ordered-float = "4.1.1"
obj-rs = { version = "0.7", optional = true }

[[example]]
name = "fltk_gui"
path = "example/centerline_gui.rs"
required-features = ["obj-rs"]

[[example]]
name = "cli"
path = "example/cli.rs"

[dev-dependencies]
fltk = "1.2"
itertools = "0.12"
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
